# teste-backend-amicci

./: .gitignore  README.md  docker-compose.yaml  entrypoint-test.sh  env.docker  manage.py  pyproject.toml
amicci_app/: apps.py  models.py  serializers.py  views.py
amicci_app/migrations/: 0001_initial.py  0002_add_categories.py  0003_category_created_at_category_updated_at.py  0004_reset_categories_sequence.py  0005_retailer_vendor_briefing_retailer_vendors.py  0006_rename_availabe_briefing_available.py  0007_briefing_created_at_briefing_updated_at_and_more.py  0008_alter_briefing_category.py
amicci_app/tests/: test_api.py  test_setup.py
docs/: desc_api.yaml
teste_backend_amicci/: asgi.py  settings.py  urls.py  wsgi.py
